fix header position on mobile

--- a/assets/features.css
+++ b/assets/features.css
@@ -86,8 +86,6 @@
   .col-12 { width: 98%; }
   .hidden-sm { display: block; } }
 
-.row { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
-
 .row > [class*='col-'] { display: flex; flex-direction: column; }
 
 /** Figures */
